fix(nav-item): add margin to navigation items for improved spacing

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -128,6 +128,10 @@ html[data-theme="dark"] {
   margin-bottom: 0px;
 }
 
+.nav-item {
+  margin-right: 5px;
+}
+
 hr {
   opacity: 0.8;
 }
