--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,1 +1,2 @@
+$content-width: 1100px;
 $brand-primary: #f5f841 !default;
